tests/baselines/reference/moduleWithTryStatement1.errors.txt
moduleWithTryStatement1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleWithTryStatement1.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      try {
      }
      catch (e) {
      }
    }
    var v = M;
    